app/asm-demo/app-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-ab-testing
  name: deployment-my-app-v2
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2.0.0
  template:
    metadata:
      labels:
        app: my-app
        version: v2.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
        prometheus.io/path: "/metrics"
        prometheus.io/scheme: "http"
    spec:
      terminationGracePeriodSeconds: 100
      containers:
      - name: my-app
        image: containersol/k8s-deployment-strategies
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["sleep","90"]
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns-ab-testing
  name: svc-my-app-v2
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: my-app
    version: v2.0.0
